# calibre-blog-rating-sync

./: .gitignore  Makefile  pyproject.toml
.github/workflows/: ci.yml
plugin/: __init__.py  bulk_link.py  config.py  link.py  network.py  scraper.py  sitemap.py  sync.py  ui.py
tests/: conftest.py  test_bulk_link.py  test_matching.py  test_network.py  test_scraper.py  test_sitemap.py  test_sync.py
